--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
   "name": "Nuxt-SSR-Firebase",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Host Nuxt.js SSR app on Firebase Cloud Functions with Firebase Dynamic Hosting.",
   "license": "MIT",
   "author": "David Royer",
   "repository": "https://github.com/davidroyer/nuxt-ssr-firebase",
   "scripts": {
-    "setup": "yarn setup:client && yarn setup:server",
+    "postinstall": "yarn setup",
+    "dev": "cd \"src\" && yarn dev",
+    "build": "yarn build:nuxt && yarn clean && yarn copyassets",
+    "serve": "firebase serve --only functions,hosting",
+    "deploy": "firebase deploy",
+    "setup": "yarn setup:client && yarn setup:firebase && yarn setup:server",
     "setup:client": "cd \"src\" && yarn install",
     "setup:server": "cd \"prod/server\" && yarn install",
-    "dev": "cd \"src\" && yarn dev",
+    "setup:firebase": "mv .setup-firebaserc .firebaserc",
     "copyassets": "yarn copydist && yarn copystatic",
     "copydist": "cp -R prod/server/nuxt/dist/ prod/client/assets",
     "copystatic": "cp -R src/static/ prod/client",
     "clean": "rimraf prod/client/assets/*",
-    "build": "yarn build:nuxt && yarn clean && yarn copyassets",
-    "build:nuxt": "cd \"src\" && yarn build",
-    "serve": "firebase serve --only functions,hosting",
-    "deploy": "firebase deploy"
+    "build:nuxt": "cd \"src\" && yarn build"
   },
   "devDependencies": {
-    "cpx": "^1.5.0",
     "cross-env": "^5.0.5",
     "rimraf": "^2.6.2"
   }
