--- a/prod/server/package.json
+++ b/prod/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "functions",
-  "description": "Cloud Functions for Firebase",
+  "description": "Nuxt-SSR-Firebase: Nuxt.js with Firebase Functions Production Setup",
   "dependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1",
@@ -11,7 +11,6 @@
     "express": "^4.15.4",
     "firebase-admin": "^5.0.1",
     "firebase-functions": "^0.6.1",
-    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "nuxt": "1.0.0-rc11",
     "vue": "~2.4.2",
