--- a/src/package.json
+++ b/src/package.json
@@ -1,14 +1,9 @@
 {
-  "name": "firebase-functions-nuxt-example",
-  "version": "1.0.0",
-  "description": "Nuxt.js project",
-  "author": "David East <droyer01@gmail.com>",
-  "private": true,
+  "name": "nuxt-ssr-firebase-source",
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "fix": "nuxt --fix",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
@@ -20,7 +15,6 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "isomorphic-fetch": "^2.2.1",
     "nuxt": "^1.0.0-rc11"
   },
   "devDependencies": {
@@ -33,7 +27,6 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "stylus": "^0.54.5"
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
