--- a/prod/client/assets/vue-ssr-client-manifest.json
+++ b/prod/client/assets/vue-ssr-client-manifest.json
@@ -1,99 +1,107 @@
 {
   "publicPath": "/assets/",
   "all": [
-    "c74491b12588421efeca.js",
-    "e90bf5ed1eda204f739b.js",
-    "c0fa11837fb6d312ba1c.js",
-    "45a029707649a6b0e990.js",
-    "22406eebae9c40e9b15e.js",
+    "icons/icon_144.9qid3ZBUcQn.png",
+    "c65ce1f243e106551511.js",
+    "1a01bc618c1176314faa.js",
+    "f4227b7caa63b5c0a024.js",
+    "a1e9947f0c18d5b7f51f.js",
     "LICENSES",
+    "icons/icon_64.9qid3ZBUcQn.png",
+    "icons/icon_120.9qid3ZBUcQn.png",
+    "134796696a182005bbb2.js",
+    "icons/icon_152.9qid3ZBUcQn.png",
+    "icons/icon_192.9qid3ZBUcQn.png",
+    "icons/icon_384.9qid3ZBUcQn.png",
+    "icons/icon_512.9qid3ZBUcQn.png",
+    "manifest.18c4f7f1.json",
     "index.ssr.html",
     "index.spa.html"
   ],
   "initial": [
-    "c74491b12588421efeca.js",
-    "22406eebae9c40e9b15e.js"
+    "c65ce1f243e106551511.js",
+    "a1e9947f0c18d5b7f51f.js"
   ],
   "async": [
-    "e90bf5ed1eda204f739b.js",
-    "c0fa11837fb6d312ba1c.js",
-    "45a029707649a6b0e990.js"
+    "1a01bc618c1176314faa.js",
+    "f4227b7caa63b5c0a024.js",
+    "134796696a182005bbb2.js"
   ],
   "modules": {
     "11215296": [
-      0
+      1
     ],
     "14502198": [
-      0
+      1
     ],
     "99662226": [
-      0
+      1
     ],
     "7e4ce0de": [
-      0
+      1
     ],
     "feec345a": [
-      0
+      1
     ],
     "f1f0ef5a": [
-      0
+      1
     ],
     "7607cd12": [
-      0
+      1
     ],
     "e89727e4": [
-      0
+      1
     ],
     "1d74df1e": [
-      0
+      1
     ],
     "5b2c5af7": [
-      0
+      1
     ],
     "25f087d2": [
-      0
+      1
     ],
     "63a080d5": [
-      0
+      1
     ],
     "2eea921d": [
-      0
+      1
     ],
     "7ca239de": [
-      0
+      1
     ],
     "35524f8e": [
-      0
+      1
     ],
     "71d0e303": [
-      0
+      1
     ],
     "e47bd346": [
-      0
+      1
     ],
     "6ff47022": [
-      0
+      1
     ],
     "5b351356": [
-      0
+      1
     ],
     "155f3b8a": [
-      0
+      1
     ],
     "034f42c3": [
-      0
+      1
     ],
     "bab23aca": [
-      0
+      1
     ],
     "7384988f": [
-      0
+      1
     ],
     "18d2e68a": [
-      0
+      1
     ],
     "0cd00548": [
-      0
+      1
     ],
     "05090404": [
       4
@@ -102,76 +110,76 @@
       4
     ],
     "1a65a490": [
-      0
+      1
     ],
     "6cdff23b": [
-      0
+      1
     ],
     "e1b8be30": [
-      0
+      1
     ],
     "093eef07": [
-      0
+      1
     ],
     "e2109746": [
-      0
+      1
     ],
     "752d63af": [
-      0
+      1
     ],
     "51865a20": [
-      0
+      1
     ],
     "0f2bc1dc": [
-      0
+      1
     ],
     "08f3303a": [
-      0
+      1
     ],
     "b662faca": [
-      0
+      1
     ],
     "1f6a2738": [
-      0
+      1
     ],
     "0835a3fc": [
-      0
+      1
     ],
     "41b2099a": [
-      0
+      1
     ],
     "497ae47a": [
-      0
+      1
     ],
     "70d7c10c": [
-      0
+      1
     ],
     "b31fdc94": [
-      0
+      1
     ],
     "4200adcd": [
-      0
+      1
     ],
     "5d3a0546": [
-      0
+      1
     ],
     "4709c25a": [
-      0
+      1
     ],
     "05a086b8": [
-      0
+      1
     ],
     "19e82d4d": [
-      0
+      1
     ],
     "70ed03f4": [
-      0
+      1
     ],
     "43cbbf4d": [
-      0
+      1
     ],
     "0855e7d4": [
-      0
+      1
     ],
     "6da85d62": [
       4
@@ -189,172 +197,175 @@
       4
     ],
     "39425fdb": [
-      0
+      1
     ],
     "ec7efc7a": [
-      0
+      1
     ],
     "439147a2": [
-      0
+      1
     ],
     "167720ba": [
-      0
+      1
     ],
     "60f776b8": [
-      0
+      1
     ],
     "5bbdd6b3": [
-      0
+      1
     ],
     "1b6b1c39": [
-      0
+      1
     ],
     "00e8b82b": [
-      0
+      1
     ],
     "f7ca66e4": [
-      0
+      1
     ],
     "c0fe4470": [
-      0
+      1
     ],
     "314984da": [
-      0
+      1
     ],
     "3c718f78": [
-      0
+      1
     ],
     "c9139470": [
-      0
+      1
     ],
     "4ea1944a": [
-      0
+      1
     ],
     "436005f4": [
-      0
+      1
     ],
     "b8939aa8": [
-      0
+      1
     ],
     "564396f8": [
-      0
+      1
     ],
     "164ff40c": [
-      0
+      1
     ],
     "dbbfc58c": [
-      0
+      1
     ],
     "280206dc": [
-      0
+      1
     ],
     "0dccf76c": [
-      0
+      1
     ],
     "3d3a6c18": [
-      0
+      1
     ],
     "21767a25": [
-      0
+      1
     ],
     "8c35e12a": [
-      0
+      1
+    ],
+    "0be49c28": [
+      4
     ],
     "3adfbcba": [
-      0
+      1
     ],
     "a31de1b2": [
-      0
+      1
     ],
     "49583c5a": [
-      0
+      1
     ],
     "92b4e05a": [
-      0
+      1
     ],
     "60c74a95": [
-      0
+      1
     ],
     "cfbdd46a": [
-      0
+      1
     ],
     "2d2ccf25": [
-      0
+      1
     ],
     "06147eaf": [
-      0
+      1
     ],
     "359f450a": [
-      0
+      1
     ],
     "6013cf04": [
-      0
+      1
     ],
     "34703a16": [
-      0
+      1
     ],
     "4c3c621c": [
-      0
+      1
     ],
     "fd81a62a": [
-      0
+      1
     ],
     "0e249e42": [
-      0
+      1
     ],
     "650cf044": [
-      0
+      1
     ],
     "04ec7523": [
-      0
+      1
     ],
     "d1c0bcc8": [
-      0
+      1
     ],
     "3d029528": [
-      0
+      1
     ],
     "ec2c7bd8": [
-      0
+      1
     ],
     "509ab8e4": [
-      0
+      1
     ],
     "0da6e0ee": [
-      0
+      1
     ],
     "480712b8": [
-      0
+      1
     ],
     "3c761b2e": [
-      0
+      1
     ],
     "f2682cf4": [
-      0
+      1
     ],
     "130db4b6": [
-      0
+      1
     ],
     "2f72dfa9": [
-      0
+      1
     ],
     "12a76c93": [
-      0
+      1
     ],
     "07b13ba3": [
-      0
+      1
     ],
     "61ee08ba": [
-      0
+      1
     ],
     "7326f58d": [
-      0
+      1
     ],
     "84031bfa": [
-      0
+      1
     ],
     "95c75cee": [
-      0
+      1
     ],
     "2461170c": [
       4
@@ -369,10 +380,10 @@
       4
     ],
     "5ec83b28": [
-      0
+      1
     ],
     "6a73df2a": [
-      0
+      1
     ],
     "5baec0b5": [
       4
@@ -411,280 +422,280 @@
       4
     ],
     "d95c2d48": [
-      0
+      1
     ],
     "37613e1c": [
-      0
+      1
     ],
     "a5803654": [
-      0
+      1
     ],
     "12791b0e": [
-      0
+      1
     ],
     "423c9a5c": [
-      0
+      1
     ],
     "a026283a": [
-      0
+      1
     ],
     "15fb62f8": [
-      0
+      1
     ],
     "74670ad2": [
-      0
+      1
     ],
     "47f70eaa": [
-      0
+      1
     ],
     "470823fc": [
-      0
+      1
     ],
     "0703591b": [
-      0
+      1
     ],
     "41a4e7b6": [
-      0
+      1
     ],
     "802a7a7e": [
-      0
+      1
     ],
     "438fda3f": [
-      0
+      1
     ],
     "bf241c02": [
-      0
+      1
     ],
     "622a3f64": [
-      0
+      1
     ],
     "2e59b793": [
-      0
+      1
     ],
     "cca0889e": [
-      0
+      1
     ],
     "15e47d68": [
-      0
+      1
     ],
     "22bbc43d": [
-      0
+      1
     ],
     "0d0d21ba": [
-      0
+      1
     ],
     "302b03e2": [
-      0
+      1
     ],
     "691f6574": [
-      0
+      1
     ],
     "2323c05b": [
-      0
+      1
     ],
     "16f544ec": [
-      0
+      1
     ],
     "2fb3fa5c": [
-      0
+      1
     ],
     "d297055c": [
-      0
+      1
     ],
     "2b0e4b81": [
-      0
+      1
     ],
     "22f9958a": [
-      0
+      1
     ],
     "5601553a": [
-      0
+      1
     ],
     "4e2dd768": [
-      0
+      1
     ],
     "72db6305": [
-      0
+      1
     ],
     "5be0fea3": [
-      0
+      1
     ],
     "18a001c5": [
-      0
+      1
     ],
     "17ae2e58": [
-      0
+      1
     ],
     "2b986b4a": [
-      0
+      1
     ],
     "2608ae2e": [
-      0
+      1
     ],
     "06501d7c": [
-      0
+      1
     ],
     "477fb31e": [
-      0
+      1
     ],
     "78f87678": [
-      0
+      1
     ],
     "b4ceb3c0": [
-      0
+      1
     ],
     "46cf128a": [
-      0
+      1
     ],
     "4d3cf23d": [
-      0
+      1
     ],
     "c6091e14": [
-      0
+      1
     ],
     "438aa3c0": [
-      0
+      1
     ],
     "1bf69d78": [
-      0
+      1
     ],
     "e47a9c64": [
-      0
+      1
     ],
     "3da42686": [
-      0
+      1
     ],
     "44dd8a53": [
-      0
+      1
     ],
     "73a287ae": [
-      0
+      1
     ],
     "290f6146": [
-      0
+      1
     ],
     "9e9b49f0": [
-      0
+      1
     ],
     "6dc0884d": [
-      0
+      1
     ],
     "4f957cb6": [
-      0
+      1
     ],
     "50569fa5": [
-      0
+      1
     ],
     "83f21da8": [
-      0
+      1
     ],
     "69bbf262": [
-      0
+      1
     ],
     "6328282e": [
-      0
+      1
     ],
     "f37d8798": [
-      0
+      1
     ],
     "0d03ff19": [
-      0
+      1
     ],
     "624939a4": [
-      0
+      1
     ],
     "6a27864a": [
-      0
+      1
     ],
     "7417eb56": [
-      0
+      1
     ],
     "a2f01170": [
-      0
+      1
     ],
     "00f4260a": [
-      0
+      1
     ],
     "6fb50572": [
-      0
+      1
     ],
     "6c3feddc": [
-      0
+      1
     ],
     "66687d00": [
-      0
+      1
     ],
     "3c7f329a": [
-      0
+      1
     ],
     "7ad10a15": [
-      0
+      1
     ],
     "36eae05b": [
-      0
+      1
     ],
     "47f57846": [
-      0
+      1
     ],
     "761004ec": [
-      0
+      1
     ],
     "40fabb80": [
-      0
+      1
     ],
     "b2800c74": [
-      0
+      1
     ],
     "e0a755b0": [
-      0
+      1
     ],
     "4ed309c8": [
-      0
+      1
     ],
     "5f6be248": [
-      0
+      1
     ],
     "1c76ebd5": [
-      0
+      1
     ],
     "64f29d0e": [
-      0
+      1
     ],
     "1a4d1062": [
-      0
+      1
     ],
     "2930ca72": [
-      0
+      1
     ],
     "6f2c0dd0": [
-      0
+      1
     ],
     "39cd4aa8": [
-      0
+      1
     ],
     "7a467564": [
-      0
+      1
     ],
     "29e26948": [
-      0
+      1
     ],
     "408f09ae": [
-      0
+      1
     ],
     "3642b0c9": [
-      0
+      1
     ],
     "5001d4bc": [
-      0
+      1
     ],
     "aae6143c": [
-      1
+      8
     ],
     "3cfa209e": [
-      1
+      8
     ],
     "3ce2cc0a": [
-      1
+      8
     ],
     "10a2f4fa": [
       2
@@ -693,7 +704,7 @@
       3
     ],
     "d533015c": [
-      1
+      8
     ]
   }
 }
