--- a/prod/server/package.json
+++ b/prod/server/package.json
@@ -2,21 +2,21 @@
   "name": "functions",
   "description": "Nuxt-SSR-Firebase: Nuxt.js with Firebase Functions Production Setup",
   "dependencies": {
-    "core-js": "^2.5.7",
-    "cross-env": "^5.0.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.23.0",
+    "clone": "^2.1.1",
     "debug": "^3.1.0",
-    "express": "^4.15.3",
-    "firebase-admin": "^5.12.1",
-    "firebase-functions": "^1.0.3",
-    "lodash": "^4.17.10",
-    "nuxt-edge": "^2.0.0-25452542.7f9d16c",
-    "regenerator-runtime": "^0.11.1",
-    "source-map-support": "^0.4.15",
-    "util.promisify": "^1.0.0",
-    "vue": "^2.5.16",
-    "vue-meta": "^1.5.0",
+    "es6-promise": "^4.1.1",
+    "express": "^4.15.4",
+    "firebase-admin": "^5.0.1",
+    "firebase-functions": "^0.6.1",
+    "lodash": "^4.17.4",
+    "nuxt": "1.0.0-rc11",
+    "vue": "~2.4.2",
+    "vue-meta": "^1.2.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.0"
   },
   "private": true
 }
