--- a/prod/client/assets/vue-ssr-client-manifest.json
+++ b/prod/client/assets/vue-ssr-client-manifest.json
@@ -1,699 +1,809 @@
 {
   "publicPath": "/assets/",
   "all": [
-    "c74491b12588421efeca.js",
-    "e90bf5ed1eda204f739b.js",
-    "c0fa11837fb6d312ba1c.js",
-    "45a029707649a6b0e990.js",
-    "22406eebae9c40e9b15e.js",
+    "layouts/default.519b93381240b7d1673c.js.map",
+    "layouts/default.519b93381240b7d1673c.js",
+    "pages/page3.9bec81290297cfd00adf.js",
+    "pages/page2.04e180a4cb0334f865ba.js",
+    "common.c1d4db95c43fd503a449.js",
+    "app.56e26cde9279648bf4e5.js",
+    "manifest.e27e4fa45dcca3abf86b.js",
+    "common.cf5dd8ccbe9fdbf73a03c079fd3fb3de.css",
     "LICENSES",
-    "index.ssr.html",
-    "index.spa.html"
+    "pages/index.0a767cd47e782669f7e4.js",
+    "pages/index.0a767cd47e782669f7e4.js.map",
+    "pages/page3.9bec81290297cfd00adf.js.map",
+    "pages/page2.04e180a4cb0334f865ba.js.map",
+    "common.c1d4db95c43fd503a449.js.map",
+    "app.56e26cde9279648bf4e5.js.map",
+    "common.cf5dd8ccbe9fdbf73a03c079fd3fb3de.css.map",
+    "manifest.e27e4fa45dcca3abf86b.js.map",
+    "index.spa.html",
+    "index.ssr.html"
   ],
   "initial": [
-    "c74491b12588421efeca.js",
-    "22406eebae9c40e9b15e.js"
+    "manifest.e27e4fa45dcca3abf86b.js",
+    "common.c1d4db95c43fd503a449.js",
+    "app.56e26cde9279648bf4e5.js"
   ],
   "async": [
-    "e90bf5ed1eda204f739b.js",
-    "c0fa11837fb6d312ba1c.js",
-    "45a029707649a6b0e990.js"
+    "layouts/default.519b93381240b7d1673c.js",
+    "pages/page3.9bec81290297cfd00adf.js",
+    "pages/page2.04e180a4cb0334f865ba.js",
+    "pages/index.0a767cd47e782669f7e4.js"
   ],
   "modules": {
-    "11215296": [
-      0
-    ],
-    "14502198": [
-      0
-    ],
-    "99662226": [
-      0
-    ],
-    "7e4ce0de": [
-      0
-    ],
-    "feec345a": [
-      0
-    ],
-    "f1f0ef5a": [
-      0
-    ],
-    "7607cd12": [
-      0
-    ],
-    "e89727e4": [
-      0
-    ],
-    "1d74df1e": [
-      0
-    ],
-    "5b2c5af7": [
-      0
-    ],
-    "25f087d2": [
-      0
-    ],
-    "63a080d5": [
-      0
-    ],
-    "2eea921d": [
-      0
-    ],
-    "7ca239de": [
-      0
-    ],
-    "35524f8e": [
-      0
-    ],
-    "71d0e303": [
-      0
-    ],
-    "e47bd346": [
-      0
-    ],
-    "6ff47022": [
-      0
-    ],
-    "5b351356": [
-      0
-    ],
-    "155f3b8a": [
-      0
-    ],
-    "034f42c3": [
-      0
-    ],
-    "bab23aca": [
-      0
-    ],
-    "7384988f": [
-      0
-    ],
-    "18d2e68a": [
-      0
-    ],
-    "0cd00548": [
-      0
-    ],
-    "05090404": [
-      4
-    ],
-    "53aff1e4": [
-      4
-    ],
-    "1a65a490": [
-      0
-    ],
-    "6cdff23b": [
-      0
-    ],
-    "e1b8be30": [
-      0
-    ],
-    "093eef07": [
-      0
-    ],
-    "e2109746": [
-      0
-    ],
-    "752d63af": [
-      0
-    ],
-    "51865a20": [
-      0
-    ],
-    "0f2bc1dc": [
-      0
-    ],
-    "08f3303a": [
-      0
-    ],
-    "b662faca": [
-      0
-    ],
-    "1f6a2738": [
-      0
-    ],
-    "0835a3fc": [
-      0
-    ],
-    "41b2099a": [
-      0
-    ],
-    "497ae47a": [
-      0
-    ],
-    "70d7c10c": [
-      0
-    ],
-    "b31fdc94": [
-      0
-    ],
-    "4200adcd": [
-      0
-    ],
-    "5d3a0546": [
-      0
-    ],
-    "4709c25a": [
-      0
-    ],
-    "05a086b8": [
-      0
-    ],
-    "19e82d4d": [
-      0
-    ],
-    "70ed03f4": [
-      0
-    ],
-    "43cbbf4d": [
-      0
-    ],
-    "0855e7d4": [
-      0
-    ],
-    "6da85d62": [
-      4
-    ],
-    "6d7cd40e": [
-      4
-    ],
-    "7279b843": [
-      4
-    ],
-    "35a39c51": [
-      4
-    ],
-    "669b2596": [
-      4
-    ],
-    "39425fdb": [
-      0
-    ],
-    "ec7efc7a": [
-      0
-    ],
-    "439147a2": [
-      0
-    ],
-    "167720ba": [
-      0
-    ],
-    "60f776b8": [
-      0
-    ],
-    "5bbdd6b3": [
-      0
-    ],
-    "1b6b1c39": [
-      0
-    ],
-    "00e8b82b": [
-      0
-    ],
-    "f7ca66e4": [
-      0
-    ],
-    "c0fe4470": [
-      0
-    ],
-    "314984da": [
-      0
-    ],
-    "3c718f78": [
-      0
-    ],
-    "c9139470": [
-      0
-    ],
-    "4ea1944a": [
-      0
-    ],
-    "436005f4": [
-      0
-    ],
-    "b8939aa8": [
-      0
-    ],
-    "564396f8": [
-      0
-    ],
-    "164ff40c": [
-      0
-    ],
-    "dbbfc58c": [
-      0
-    ],
-    "280206dc": [
-      0
-    ],
-    "0dccf76c": [
-      0
-    ],
-    "3d3a6c18": [
-      0
-    ],
-    "21767a25": [
-      0
-    ],
-    "8c35e12a": [
-      0
-    ],
-    "3adfbcba": [
-      0
-    ],
-    "a31de1b2": [
-      0
-    ],
-    "49583c5a": [
-      0
-    ],
-    "92b4e05a": [
-      0
-    ],
-    "60c74a95": [
-      0
-    ],
-    "cfbdd46a": [
-      0
-    ],
-    "2d2ccf25": [
-      0
-    ],
-    "06147eaf": [
-      0
-    ],
-    "359f450a": [
-      0
-    ],
-    "6013cf04": [
-      0
-    ],
-    "34703a16": [
-      0
-    ],
-    "4c3c621c": [
-      0
-    ],
-    "fd81a62a": [
-      0
-    ],
-    "0e249e42": [
-      0
-    ],
-    "650cf044": [
-      0
-    ],
-    "04ec7523": [
-      0
-    ],
-    "d1c0bcc8": [
-      0
-    ],
-    "3d029528": [
-      0
-    ],
-    "ec2c7bd8": [
-      0
-    ],
-    "509ab8e4": [
-      0
+    "11067752": [
+      2,
+      11
     ],
-    "0da6e0ee": [
-      0
-    ],
-    "480712b8": [
-      0
-    ],
-    "3c761b2e": [
-      0
-    ],
-    "f2682cf4": [
-      0
-    ],
-    "130db4b6": [
-      0
-    ],
-    "2f72dfa9": [
-      0
-    ],
-    "12a76c93": [
-      0
-    ],
-    "07b13ba3": [
-      0
-    ],
-    "61ee08ba": [
-      0
-    ],
-    "7326f58d": [
-      0
-    ],
-    "84031bfa": [
-      0
-    ],
-    "95c75cee": [
-      0
-    ],
-    "2461170c": [
-      4
-    ],
-    "2a1a843a": [
-      4
-    ],
-    "ebbf3db4": [
-      4
-    ],
-    "43b0463a": [
-      4
-    ],
-    "5ec83b28": [
-      0
-    ],
-    "6a73df2a": [
-      0
-    ],
-    "5baec0b5": [
-      4
-    ],
-    "5b976c21": [
-      4
-    ],
-    "4885e307": [
-      4
-    ],
-    "7e9b7b1b": [
-      4
-    ],
-    "0bafc715": [
-      4
-    ],
-    "41c55f29": [
-      4
-    ],
-    "c29616c6": [
-      4
-    ],
-    "6139684e": [
-      4
-    ],
-    "4521485a": [
-      4
-    ],
-    "4b678f24": [
-      4
-    ],
-    "63e0c584": [
-      4
-    ],
-    "3327ba76": [
-      4
-    ],
-    "d95c2d48": [
-      0
-    ],
-    "37613e1c": [
-      0
-    ],
-    "a5803654": [
-      0
-    ],
-    "12791b0e": [
-      0
-    ],
-    "423c9a5c": [
-      0
-    ],
-    "a026283a": [
-      0
-    ],
-    "15fb62f8": [
-      0
-    ],
-    "74670ad2": [
-      0
-    ],
-    "47f70eaa": [
-      0
-    ],
-    "470823fc": [
-      0
-    ],
-    "0703591b": [
-      0
-    ],
-    "41a4e7b6": [
-      0
-    ],
-    "802a7a7e": [
-      0
-    ],
-    "438fda3f": [
-      0
-    ],
-    "bf241c02": [
-      0
-    ],
-    "622a3f64": [
-      0
-    ],
-    "2e59b793": [
-      0
-    ],
-    "cca0889e": [
-      0
-    ],
-    "15e47d68": [
-      0
-    ],
-    "22bbc43d": [
-      0
-    ],
-    "0d0d21ba": [
-      0
-    ],
-    "302b03e2": [
-      0
-    ],
-    "691f6574": [
-      0
-    ],
-    "2323c05b": [
-      0
-    ],
-    "16f544ec": [
-      0
-    ],
-    "2fb3fa5c": [
-      0
-    ],
-    "d297055c": [
-      0
-    ],
-    "2b0e4b81": [
-      0
-    ],
-    "22f9958a": [
-      0
-    ],
-    "5601553a": [
-      0
-    ],
-    "4e2dd768": [
-      0
-    ],
-    "72db6305": [
-      0
-    ],
-    "5be0fea3": [
-      0
-    ],
-    "18a001c5": [
-      0
-    ],
-    "17ae2e58": [
-      0
-    ],
-    "2b986b4a": [
-      0
-    ],
-    "2608ae2e": [
-      0
-    ],
-    "06501d7c": [
-      0
-    ],
-    "477fb31e": [
-      0
-    ],
-    "78f87678": [
-      0
-    ],
-    "b4ceb3c0": [
-      0
-    ],
-    "46cf128a": [
-      0
-    ],
-    "4d3cf23d": [
-      0
-    ],
-    "c6091e14": [
-      0
-    ],
-    "438aa3c0": [
-      0
-    ],
-    "1bf69d78": [
-      0
-    ],
-    "e47a9c64": [
-      0
-    ],
-    "3da42686": [
-      0
-    ],
-    "44dd8a53": [
-      0
-    ],
-    "73a287ae": [
-      0
-    ],
-    "290f6146": [
-      0
-    ],
-    "9e9b49f0": [
-      0
-    ],
-    "6dc0884d": [
-      0
-    ],
-    "4f957cb6": [
-      0
-    ],
-    "50569fa5": [
-      0
-    ],
-    "83f21da8": [
-      0
-    ],
-    "69bbf262": [
-      0
-    ],
-    "6328282e": [
-      0
+    "34743616": [
+      4,
+      13
     ],
-    "f37d8798": [
-      0
-    ],
-    "0d03ff19": [
-      0
+    "71787424": [
+      4,
+      13
     ],
-    "624939a4": [
-      0
+    "c9a5df2a": [
+      4,
+      13
     ],
-    "6a27864a": [
-      0
+    "cb10d370": [
+      4,
+      13
     ],
-    "7417eb56": [
-      0
+    "5dea6790": [
+      4,
+      13
     ],
-    "a2f01170": [
-      0
+    "8693773e": [
+      4,
+      13
     ],
-    "00f4260a": [
-      0
+    "aca5fa7a": [
+      4,
+      13
     ],
-    "6fb50572": [
-      0
+    "88a08fd8": [
+      9,
+      10
     ],
-    "6c3feddc": [
-      0
+    "2d74c3ea": [
+      4,
+      13
     ],
-    "66687d00": [
-      0
+    "37ed05fa": [
+      4,
+      13
     ],
-    "3c7f329a": [
-      0
+    "2e99d4d9": [
+      4,
+      13
     ],
-    "7ad10a15": [
+    "2dc825e8": [
+      1,
       0
     ],
-    "36eae05b": [
-      0
+    "a8827e0c": [
+      4,
+      13
     ],
-    "47f57846": [
-      0
+    "211ed7ac": [
+      3,
+      12
     ],
-    "761004ec": [
-      0
+    "6902ad1e": [
+      9,
+      10
     ],
-    "40fabb80": [
-      0
+    "d0c51f14": [
+      4,
+      13
     ],
-    "b2800c74": [
-      0
+    "645e2f7a": [
+      4,
+      13
     ],
-    "e0a755b0": [
-      0
+    "51c06cff": [
+      5,
+      7,
+      14,
+      15
     ],
-    "4ed309c8": [
-      0
+    "8eea9102": [
+      4,
+      13
     ],
-    "5f6be248": [
-      0
+    "55076fc8": [
+      5,
+      7,
+      14,
+      15
     ],
-    "1c76ebd5": [
+    "58cfc2d7": [
+      1,
       0
     ],
-    "64f29d0e": [
-      0
+    "e9f15b30": [
+      9,
+      10
     ],
-    "1a4d1062": [
-      0
+    "18a16dd6": [
+      4,
+      13
     ],
-    "2930ca72": [
-      0
+    "0b1e29b4": [
+      4,
+      13
     ],
-    "6f2c0dd0": [
-      0
+    "2e4edf5a": [
+      4,
+      13
     ],
-    "39cd4aa8": [
-      0
+    "eaa652e0": [
+      4,
+      13
     ],
-    "7a467564": [
-      0
+    "10a45c9c": [
+      4,
+      13
+    ],
+    "3fa0e569": [
+      4,
+      13
+    ],
+    "d7684e34": [
+      4,
+      13
     ],
-    "29e26948": [
-      0
+    "106740b1": [
+      4,
+      13
     ],
-    "408f09ae": [
+    "4efa3f2f": [
+      1,
       0
     ],
-    "3642b0c9": [
-      0
+    "ce20da44": [
+      4,
+      13
     ],
-    "5001d4bc": [
+    "d711160e": [
+      1,
       0
-    ],
-    "aae6143c": [
-      1
-    ],
-    "3cfa209e": [
-      1
-    ],
-    "3ce2cc0a": [
-      1
-    ],
-    "10a2f4fa": [
-      2
-    ],
-    "1086c5f8": [
-      3
     ],
-    "d533015c": [
-      1
+    "128ce914": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "a923acd0": [
+      4,
+      13
+    ],
+    "474cfc8d": [
+      4,
+      13
+    ],
+    "2bafea54": [
+      4,
+      13
+    ],
+    "229837bb": [
+      4,
+      13
+    ],
+    "9a6232ee": [
+      4,
+      13
+    ],
+    "5e59e63e": [
+      4,
+      13
+    ],
+    "fd0d1fe0": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "bc1c6616": [
+      4,
+      13
+    ],
+    "3eedab15": [
+      4,
+      13
+    ],
+    "33827e83": [
+      4,
+      13
+    ],
+    "52236eff": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "32bdd064": [
+      4,
+      13
+    ],
+    "4b6a256d": [
+      2,
+      11
+    ],
+    "dd2a659a": [
+      4,
+      13
+    ],
+    "9e9d0166": [
+      4,
+      13
+    ],
+    "7b4b049a": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "a892edc0": [
+      4,
+      13
+    ],
+    "3df8766d": [
+      1,
+      0
+    ],
+    "d165d67c": [
+      9,
+      10
+    ],
+    "7173bfb7": [
+      4,
+      13
+    ],
+    "cc1b1770": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "7148d540": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "7d56f4d2": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "67afb57c": [
+      4,
+      13
+    ],
+    "172d717a": [
+      4,
+      13
+    ],
+    "d0d2c236": [
+      4,
+      13
+    ],
+    "49785cd6": [
+      4,
+      13
+    ],
+    "107d77e7": [
+      4,
+      13
+    ],
+    "5e7ea45c": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "947d34f0": [
+      1,
+      0
+    ],
+    "680456e0": [
+      4,
+      13
+    ],
+    "2cf2d4ea": [
+      4,
+      13
+    ],
+    "0df04838": [
+      4,
+      13
+    ],
+    "02033b56": [
+      4,
+      13
+    ],
+    "e077cf3e": [
+      4,
+      13
+    ],
+    "7c45b238": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "14f34f34": [
+      4,
+      13
+    ],
+    "a9d3cc1e": [
+      9,
+      10
+    ],
+    "a73b0450": [
+      4,
+      13
+    ],
+    "0482b3e4": [
+      4,
+      13
+    ],
+    "10f85fd1": [
+      3,
+      12
+    ],
+    "fe60a9f2": [
+      4,
+      13
+    ],
+    "0483c257": [
+      4,
+      13
+    ],
+    "a37e642c": [
+      4,
+      13
+    ],
+    "fed496f4": [
+      4,
+      13
+    ],
+    "cbae1bd6": [
+      4,
+      13
+    ],
+    "870ab4d8": [
+      4,
+      13
+    ],
+    "26b50220": [
+      4,
+      13
+    ],
+    "6d8bd947": [
+      4,
+      13
+    ],
+    "0f4c669a": [
+      4,
+      13
+    ],
+    "2438e970": [
+      4,
+      13
+    ],
+    "31467ad4": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "9d102996": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "2028ebc9": [
+      4,
+      13
+    ],
+    "fc87262e": [
+      1,
+      0
+    ],
+    "1c0379e3": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "4698d11c": [
+      4,
+      13
+    ],
+    "5681189a": [
+      4,
+      13
+    ],
+    "b25e5a00": [
+      4,
+      13
+    ],
+    "43bdf916": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "3fd493d2": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "0a15f7a6": [
+      4,
+      13
+    ],
+    "0b1b5941": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "2be03ee2": [
+      4,
+      13
+    ],
+    "0579d661": [
+      4,
+      13
+    ],
+    "1a02dc5a": [
+      1,
+      0
+    ],
+    "a85f3f76": [
+      4,
+      13
+    ],
+    "36ad6d92": [
+      4,
+      13
+    ],
+    "7870e0a3": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "456916c8": [
+      4,
+      13
+    ],
+    "73dd295e": [
+      4,
+      13
+    ],
+    "175a852f": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "4ebf2f56": [
+      4,
+      13
+    ],
+    "9fa47a64": [
+      4,
+      13
+    ],
+    "87d12d60": [
+      4,
+      13
+    ],
+    "062cd7d7": [
+      4,
+      13
+    ],
+    "9a9b7efe": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "0d3e6114": [
+      1,
+      0
+    ],
+    "34e4516a": [
+      4,
+      13
+    ],
+    "c98036cc": [
+      4,
+      13
+    ],
+    "34a0790b": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "7fdb7fb5": [
+      4,
+      13
+    ],
+    "81cd08f8": [
+      4,
+      13
+    ],
+    "10b17756": [
+      4,
+      13
+    ],
+    "4f055832": [
+      4,
+      13
+    ],
+    "2188eb98": [
+      4,
+      13
+    ],
+    "18838ce9": [
+      1,
+      0
+    ],
+    "221d4281": [
+      4,
+      13
+    ],
+    "875da2ac": [
+      4,
+      13
+    ],
+    "101dff2c": [
+      4,
+      13
+    ],
+    "5e313c00": [
+      4,
+      13
+    ],
+    "ad9956c6": [
+      4,
+      13
+    ],
+    "6f3e6c9e": [
+      4,
+      13
+    ],
+    "465781db": [
+      4,
+      13
+    ],
+    "3f42717b": [
+      4,
+      13
+    ],
+    "b9846196": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "7bcb24ff": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "12b206eb": [
+      4,
+      13
+    ],
+    "3d10fd36": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "89fb6bd2": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "dc1820b2": [
+      4,
+      13
+    ],
+    "d0e584b6": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "11d68e4a": [
+      4,
+      13
+    ],
+    "257c946e": [
+      1,
+      0
+    ],
+    "2f521816": [
+      1,
+      0
+    ],
+    "5aa4bacd": [
+      4,
+      13
+    ],
+    "0df0c25c": [
+      4,
+      13
+    ],
+    "1e05d5c6": [
+      2,
+      11
+    ],
+    "783222fc": [
+      4,
+      13
+    ],
+    "a12394e4": [
+      4,
+      13
+    ],
+    "d0c9aaca": [
+      4,
+      13
+    ],
+    "40391c11": [
+      4,
+      13
+    ],
+    "74153eee": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "2d9a3e8f": [
+      4,
+      13
+    ],
+    "1b032524": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "a29f4cc0": [
+      9,
+      10
+    ],
+    "12dacd30": [
+      4,
+      13
+    ],
+    "55e5819e": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "4beea9c6": [
+      1,
+      0
+    ],
+    "7bb2f2a6": [
+      4,
+      13
+    ],
+    "17a3572a": [
+      4,
+      13
+    ],
+    "7d28890e": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "3a08e68b": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "9c7e6144": [
+      4,
+      13
+    ],
+    "3d17873c": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "d45cfe1c": [
+      9,
+      10
+    ],
+    "1134af74": [
+      4,
+      13
+    ],
+    "1d47a54c": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "5f2ada5f": [
+      1,
+      0
+    ],
+    "d712336a": [
+      4,
+      13
+    ],
+    "95b36600": [
+      4,
+      13
+    ],
+    "28fd2dbf": [
+      4,
+      13
+    ],
+    "d93d7826": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "7b4ec17d": [
+      4,
+      13
+    ],
+    "4bbab687": [
+      4,
+      13
+    ],
+    "5fda5646": [
+      4,
+      13
+    ],
+    "1df7be45": [
+      3,
+      12
+    ],
+    "6e072836": [
+      4,
+      13
+    ],
+    "5c67a43e": [
+      1,
+      0
+    ],
+    "731a9af9": [
+      4,
+      13
+    ],
+    "629e580d": [
+      4,
+      13
     ]
   }
 }
