--- a/src/package.json
+++ b/src/package.json
@@ -9,18 +9,17 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/pwa": "^2.0.8",
-    "core-js": "^2.5.7",
-    "lodash": "^4.17.10",
-    "nuxt-edge": "^2.0.0-25452542.7f9d16c",
-    "regenerator-runtime": "^0.11.1",
-    "source-map-support": "^0.4.15"
+    "@firebase/app": "^0.1.1",
+    "@firebase/database": "^0.1.1",
+    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "nuxt": "^1.0.0-rc11"
   },
   "devDependencies": {
-    "@firebase/app-types": "^0.3.2",
     "babel-eslint": "^7.2.3",
-    "backpack-core": "^0.4.1",
-    "cpx": "^1.5.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.9.0",
@@ -28,8 +27,6 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "npm-run-all": "^4.1.3",
-    "rimraf": "^2.6.2"
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
